{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "9d0fd170-f765-470e-b2a8-5f2078e7ef57",
            "actions": [
                {
                    "name": "TouchTap",
                    "type": "Button",
                    "id": "883c8632-da8a-418f-a39a-5abe0e5d0b5e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPos",
                    "type": "PassThrough",
                    "id": "828b6871-4311-4ffe-b700-6cba9909105b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "759b5bb5-8ec2-42ed-a0f3-fa1c04e1e600",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchTap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db152b9b-67c6-4003-8b0c-e93590bede14",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}